--- a/src/style/_locais.scss
+++ b/src/style/_locais.scss
@@ -1,7 +1,7 @@
 .locais {
   padding: rem(60) 0;
   
-  & > .row + .row {
+  & > div + div {
     margin-top: rem(30);
   }
 
@@ -18,6 +18,6 @@
     margin: {
       top: rem(20);
       bottom: rem(20);
-    };
+    }
   }
 }
