--- a/src/templates/estudo.html
+++ b/src/templates/estudo.html
@@ -8,7 +8,14 @@
 </head>
 
 <body>
-  <h1>Estudo</h1>
+  <div class="container">
+    <div class="grid-12">
+      <h1>Estudo</h1>
+    </div>
+    <div class="grid-12">
+      <div id="notices"></div>
+    </div>
+  </div>
 </body>
 
 </html>
